Prevent auto dark mode tools from breaking the already supported dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 @import './helper/timeline.css';
 
 :root {
+  color-scheme: dark;
   isolation: isolate;
 
   --white: #fff;
